--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,5 @@
 compile.on.save=true
+file.reference.java-cup-11b-runtime.jar=C:\\Users\\carlo\\Desktop\\Dolor y desesperaci\u00f3n\\Compiladores I\\compiladores_proyecto\\src\\JAR\\java-cup-11b-runtime.jar
+file.reference.java-cup-11b.jar=C:\\Users\\carlo\\Desktop\\Dolor y desesperaci\u00f3n\\Compiladores I\\compiladores_proyecto\\src\\JAR\\java-cup-11b.jar
+file.reference.jflex-full-1.8.2.jar=C:\\Users\\carlo\\Desktop\\Dolor y desesperaci\u00f3n\\Compiladores I\\compiladores_proyecto\\src\\JAR\\jflex-full-1.8.2.jar
 user.properties.file=C:\\Users\\carlo\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
