--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/proyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.JFlex.jar=JFlex.jar
+file.reference.java-cup-11b-runtime.jar=src\\proyecto\\java-cup-11b-runtime.jar
+file.reference.java-cup-11b.jar=src\\proyecto\\java-cup-11b.jar
+file.reference.jflex-full-1.8.2.jar=src\\proyecto\\jflex-full-1.8.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.JFlex.jar}
+    ${file.reference.java-cup-11b-runtime.jar}:\
+    ${file.reference.java-cup-11b.jar}:\
+    ${file.reference.jflex-full-1.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=proyecto.Proyecto
+main.class=proyecto.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
