--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/proyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.java-cup-11b-runtime.jar=C:\\Users\\fer_e\\Downloads\\java-cup-11b-runtime.jar
+file.reference.java-cup-11b.jar=C:\\Users\\fer_e\\Downloads\\java-cup-11b.jar
+file.reference.jflex-full-1.8.2.jar=C:\\Users\\fer_e\\Downloads\\jflex-full-1.8.2.jar
 file.reference.JFlex.jar=JFlex.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.JFlex.jar}
+    ${file.reference.JFlex.jar}:\
+    ${file.reference.jflex-full-1.8.2.jar}:\
+    ${file.reference.java-cup-11b-runtime.jar}:\
+    ${file.reference.java-cup-11b.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
